Slightly clearer to say "usage". I seriously doubt that many users who visit the config page will have the idea of disk memory versus live memory - disk memory is a nonsense phrase, it's just disk, or disk space, but not memory!

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1841,7 +1841,7 @@ WelcomeToadlet.updatingTitle=Node Updating
 WelcomeToadlet.uriWouldHaveBeen=The URI would have been: ${uri}
 WelcomeToadlet.version=Freenet ${fullVersion} Build #${build} ${rev}
 WelcomeToadlet.versionHeader=Version Information & Node Control
-WrapperConfig.wrapper.java.maxmemory.short=Maximum memory (in megabytes)
+WrapperConfig.wrapper.java.maxmemory.short=Maximum memory usage (in megabytes)
 WrapperConfig.wrapper.java.maxmemory.long=Limit on memory used by Freenet. Freenet will need more memory if you have more queued requests, or use chat forums and other plugins, and to a lesser extent if you have a larger datastore or a fast connection. Changes will not take effect until Freenet has been restarted.
 fproxy.push.hide=Hide
 fproxy.push.show=Show
