Fix some english l10n substitution glitches

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -98,8 +98,8 @@ BuildOldAgeUserAlert.tooOldTitle=Build too old
 BuildOldAgeUserAlert.tooOldShort=This node is running such an old version of Freenet that it cannot connect to its peers any more! Please upgrade!
 ChatForumsToadlet.title=Talk to other people on Freenet
 ChatForumsToadlet.content1=At the moment there is no stable built-in support for discussion forums on Freenet. However, there are two widely-used chat programs which allow you to chat anonymously over Freenet:
-ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}on the web${/frost-web}) - The original Freenet discussion boards client. Unfortunately, Frost is vulnerable to denial of service attacks (invisible spam), and many boards are frequently unusable (show up as red). For more information and help on setting up and using Frost, see ${frost-help}here${/link}.
-ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is another message boards client, which is not vulnerable to the spam attacks that have crippled Frost. It is not as easy to set up as Frost, and is published anonymously over Freenet. Click ${fms-help}here${/link} for more information on setting up and using FMS.
+ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}on the web${/frost-web}) - The original Freenet discussion boards client. Unfortunately, Frost is vulnerable to denial of service attacks (invisible spam), and many boards are frequently unusable (show up as red). For more information and help on setting up and using Frost, see ${frost-help}here${/frost-help}.
+ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is another message boards client, which is not vulnerable to the spam attacks that have crippled Frost. It is not as easy to set up as Frost, and is published anonymously over Freenet. Click ${fms-help}here${/fms-help} for more information on setting up and using FMS.
 ChatForumsToadlet.content2=The Freenet team did not write or review either of these applications, and we cannot guarantee their quality. In Freenet 0.8 there will be an integrated message boards system called Freetalk, based on similar principles to FMS.
 ClockProblemDetectedUserAlert.title=Your computer's clock isn't on time.
 ClockProblemDetectedUserAlert.text=Freenet has detected that your computer's clock (time and date) isn't on time. It won't work properly until you fix it and restart Freenet.
@@ -462,7 +462,7 @@ FProxyToadlet.dangerousRSSTitle=Potentially Dangerous Content (RSS)
 FProxyToadlet.downloadInBackgroundToDiskButton=Download
 FProxyToadlet.downloadInBackgroundToDisk=Download the file in the background and store in ${dir}. You will be notified when the download completes, and can follow its progress on the ${page}downloads page${/page}.
 FProxyToadlet.downloadInBackgroundToTempSpaceButton=Fetch
-FProxyToadlet.downloadInBackgroundToTempSpace=Fetch the file in the background. It will be accessible <strong>only</strong> through the ${page}downloads page${/link}, and will be lost if you uninstall Freenet, click the panic button, or lose the master password. You will be notified when the fetch completes.
+FProxyToadlet.downloadInBackgroundToTempSpace=Fetch the file in the background. It will be accessible <strong>only</strong> through the ${page}downloads page${/page}, and will be lost if you uninstall Freenet, click the panic button, or lose the master password. You will be notified when the fetch completes.
 FProxyToadlet.downloadToDiskSecurityWarning=${bold}Warning${/bold}: this will store the file unencrypted on your hard disk, and may present a security risk if you are not using full-disk encryption.
 FProxyToadlet.downloadsTitle=Downloads
 FProxyToadlet.downloads=Files being downloaded from Freenet
