Java version not JVM version. Thanks sweetie.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1592,7 +1592,7 @@ StatisticsToadlet.jobType=Job Type
 StatisticsToadlet.jvmInfoTitle=Java Info
 StatisticsToadlet.jvmName=Java VM Name: ${name}
 StatisticsToadlet.jvmVendor=Java VM Vendor: ${vendor}
-StatisticsToadlet.javaVersion=Java VM Version: ${version}
+StatisticsToadlet.javaVersion=Java Version: ${version}
 StatisticsToadlet.jvmVersion=Java VM Version: ${version}
 StatisticsToadlet.keys=Keys
 StatisticsToadlet.maxMemory=Maximum Java memory: ${memory}
