Explain that can use suffixes. Thanks sweetie.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -834,7 +834,7 @@ Node.bindToLong=IP address to bind to
 Node.bwlimitMustBePositive=Bandwidth limit must be positive
 Node.clientCacheType=Client cache type?
 Node.clientCacheTypeLong=If you set this to none there will be less evidence if your computer is seized, but your node will need to re-fetch every page you visit every time you visit it, reducing performance and making your requests more visible on the network; if you set it to ram, cached pages will only be remembered until shutting down this Freenet node and will take up RAM; the first-time wizard sets it to salt-hash, which stores visited freesites on disk, but encrypted and possibly passworded according to the physical security level (so securely deleting master.keys will wipe the client cache).
-Node.clientCacheSize=Size of the client cache?
+Node.clientCacheSize=Size of the client cache? (bytes, MB, GB etc allowed)
 Node.clientCacheSizeLong=Set the size of the client cache. This is used to cache freesites you visit so that they won't need to be requested next time, and therefore will load faster and won't be visible on the network. If the client cache type is "none", this option is ignored; if it is "ram", this option is the size in RAM of the client cache (part of by the overall maximum memory limit, so increase that if you need to); if it is "salt-hash", this option is the size of the client-cache on disk.
 Node.connectToSeednodesCannotBeChangedMustDisableOpennetOrReboot=Connect to seednodes setting: Cannot disable while opennet is running, either disable and then re-enable opennet or restart Freenet.
 Node.databaseMemory=Datastore maximum memory usage (OBSOLETE: bdbje-index only!)
@@ -865,7 +865,7 @@ Node.enableULPRDataPropagationLong=Enable fast propagation of recently requested
 Node.errorApplyingConfig=Error while applying the new config : ${error}
 Node.forceBigShrink=Do large store shrinks immediately (bdbje-index store type only)
 Node.forceBigShrinkLong=Whether to do large store shrinks (over 10%) immediately (rather than waiting for the next node restart). Online shrinks do not preserve the most recently used data, so this is not recommended; use it only if you must have an immediate result. Specific to bdbje-index store type.
-Node.inBWLimit=Download bandwidth limit (bytes per second)
+Node.inBWLimit=Download bandwidth limit (bytes per second, KB MB etc allowed)
 Node.inBWLimitLong=Download bandwidth limit (bytes/sec, e.g. 200K); Freenet will try not to exceed this, but it is not very accurate; -1 = 4x set outputBandwidthLimit.
 Node.invalidStoreSize=Store size must be at least 32MB
 Node.l10nLanguage=The language Freenet will use to display messages
@@ -908,7 +908,7 @@ Node.oneConnectionPerIP=Limit to one connection per address? (friends)
 Node.oneConnectionPerIPLong=Don't allow more than one friend connection per address? This will make it slightly harder for an attacker to connect more than once to your node as different identities, in order to dominate your routing or make harvesting easier. Also prevents having the same node connected as a friend and stranger simultaneously. Note that this applies to the external IP address, so you should turn this off if you have multiple nodes on a LAN connected as friends.
 Node.opennetEnabled=Enable insecure mode (automatically connect to untrusted nodes)?
 Node.opennetEnabledLong=Enable insecure mode (aka opennet)? If this is enabled, your Freenet node will automatically exchange node references with other untrusted nodes (Strangers as opposed to Friends). But this means that the fact that you are running a node is no longer private, and many attacks are much easier. If you know enough people running Freenet, you should stick to trusted (Friends) connections to them, and turn this off.
-Node.outBWLimit=Output bandwidth limit (bytes per second)
+Node.outBWLimit=Output bandwidth limit (bytes per second, KB MB etc allowed)
 Node.outBWLimitLong=Hard output bandwidth limit (bytes/sec); Freenet should almost never exceed this. Normally you should set this to no more than half the your internet connection's upload bandwidth, which is usually much less than your download bandwidth.
 Node.paddDataPackets=Pad data packets sent by this Freenet node with random data of random length? (READ WARNING BEFORE TURNING OFF!)
 Node.paddDataPacketsLong=Pad data packets sent by this Freenet node with random-length content? For security, on a single node, turning this off is bad; if a large part of the network starts doing it, we become very vulnerable to a passive attacker. However, it should improve performance, particularly the payload percentage. You have been warned!
@@ -925,8 +925,8 @@ Node.routeAccordingToOurPeersLocationLong=Shall we use the locations of the peer
 Node.skipWrapperWarning=Skip “not using the wrapper” warning?
 Node.skipWrapperWarningLong=If true, the “not using the wrapper” warning will not be shown. Note that this will only hide the warning from the next restart on.
 Node.slashdotCacheLifetime=How long to keep data in the recent requests cache?
-Node.slashdotCacheLifetimeLong=How long to keep data in the recent requests cache (milliseconds)? Note that this goes away on restart anyway.
-Node.slashdotCacheSize=Maximum size of the recent requests cache
+Node.slashdotCacheLifetimeLong=How long to keep data in the recent requests cache (milliseconds, use k for seconds)? Note that this goes away on restart anyway.
+Node.slashdotCacheSize=Maximum size of the recent requests cache (in bytes, KB MB GB TB etc)
 Node.slashdotCacheSizeLong=Maximum size of the recent requests cache (note that there is also a time limit).
 Node.storeDirectory=Store directory
 Node.storeDirectoryLong=Name of directory to put store files in
@@ -937,7 +937,7 @@ Node.storeSaltHashResizeOnStart=Resize store on node start (salt-hash only)
 Node.storeSaltHashResizeOnStartLong=Resize store on node start (salt-hash only). If this is true, Freenet will complete resizing the datastore during startup. This will complete much faster than doing it "on the fly", but on the other hand your Freenet node will not be available for some time while it completes the resize.
 Node.storeSaltHashMigratedShort=Datastore migration finished!
 Node.storeSaltHashMigrated=Datastore migration finished! You may now delete the old datastore files:
-Node.storeSize=Freenet datastore size in bytes
+Node.storeSize=Freenet datastore size (bytes, MB GB TB etc allowed)
 Node.storeSizeLong=Size of the Freenet datastore, which includes the store and cache, and stores data passing through your node. Freenet uses disk space for many other things, such as temporary files and your downloads, which are separate.
 Node.storeType=Datastore type (LEAVE THIS ALONE)
 Node.storeTypeLong=Datastore type. Currently this can be salt-hash (this is the default, stores data on disk with a lossy hashtable and a Bloom filter), bdb-index (old store format, not recommended), or ram (FOR TESTING ONLY, keep the index and the data in memory, not on disk). Only use ram if you know what you are doing and have enough RAM to store all your data (and note it will not be saved on shutdown)! Changes will not take effect until Freenet has been restarted.
@@ -982,9 +982,9 @@ NodeClientCore.maxUSKFetchersMustBeGreaterThanZero=Must be greater than zero
 NodeClientCore.movingTempDirOnTheFlyNotSupported=Moving temp directory on the fly not supported at present
 NodeClientCore.persistentTempDir=Persistent temp files directory
 NodeClientCore.persistentTempDirLong=Name of directory to put persistent temp files in
-NodeClientCore.maxRAMBucketSize=Maximum size of a RAMBucket
+NodeClientCore.maxRAMBucketSize=Maximum size of a RAMBucket (bytes, KB MB etc allowed)
 NodeClientCore.maxRAMBucketSizeLong=Maximum size of a RAMBucket (bigger buckets will be kept as files on the disk)
-NodeClientCore.ramBucketPoolSize=Amount of RAM to dedicate to temporary buckets
+NodeClientCore.ramBucketPoolSize=Amount of RAM to dedicate to temporary buckets (bytes, KB MB etc allowed)
 NodeClientCore.ramBucketPoolSizeLong=Amount of RAM to dedicate to temporary buckets. The tradeoff is more memory usage against more IOs.
 NodeClientCore.startingUpTitle=Freenet is starting up
 NodeClientCore.startingUp=Please allow Freenet a few moments to complete the startup process, in the meantime some things may not work and Freenet may be slower than usual.
