--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1392,7 +1392,7 @@ SecurityLevels.networkThreatLevel.desc.MAXIMUM=Freenet will be ${bold}significan
 SecurityLevels.networkThreatLevel.choice.HIGH=I would like to make it much more difficult for others to monitor my communications, or I am worried about ISPs and/or governments trying to block Freenet.
 SecurityLevels.networkThreatLevel.desc.HIGH=Only connecting to Friends significantly improves security, but Freenet will be slow unless you add at least 5-10 friends.
 SecurityLevels.networkThreatLevel.choice.NORMAL=I live in a relatively free country, but I would like to make it more difficult for others to monitor my communications.
-SecurityLevels.networkThreatLevel.desc.NORMAL=Freenet will be reasonably careful to protect your anonymity, at some performance cost. We recommend that you add friends running Freenet and upgrade to HIGH.
+SecurityLevels.networkThreatLevel.desc.NORMAL=Freenet will be reasonably careful to protect your anonymity, at some performance cost. You should add friends running Freenet and upgrade to HIGH when you are able.
 SecurityLevels.networkThreatLevel.choice.LOW=I do not care about monitoring and want maximum performance.
 SecurityLevels.networkThreatLevel.desc.LOW=It may be quite easy for others to discover your identity!
 SecurityLevels.networkThreatLevel.opennetIntro=Do you know personally anyone who already uses Freenet? If you know at least 3 people who already use Freenet, you can enable darknet mode, so Freenet will only connect to your Friends, greatly improving security. However, if you don't know anyone already on Freenet, or if you want maximum performance, you should enable opennet mode, and Freenet will automatically connect to other Freenet nodes run by strangers.
