Shorter and more accurate top explanation for friends seclevel

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1414,7 +1414,7 @@ SecurityLevels.maximumNetworkThreatLevelWarning=${bold}WARNING:${/bold} You are 
 SecurityLevels.maxSecurityYouNeedFriends=${bold}You must know at least one person already running Freenet${/bold}, preferably 3, 5-10 for good performance. You must add them on the Friends page. These must be people you already know and at least marginally trust.
 SecurityLevels.maximumNetworkThreatLevelCheckbox=Yes I really want to enable maximum security, I understand that Freenet is still experimental and it may still be possible to trace me, and that this setting may dramatically reduce Freenet's performance!
 SecurityLevels.friendsThreatLevelShort=Protection if your friends attack your anonymity
-SecurityLevels.friendsThreatLevel=You can connect to your friends' Freenet nodes to improve security. Freenet can share extra information with these nodes to improve speed. However, if they try to find out what you are doing with Freenet, or if their computers are infected with malware, this may increase the risk of your anonymity being breached (but it is always safer to connect to friends than strangers). How concerned are you?
+SecurityLevels.friendsThreatLevel=Connecting to your Friends improves security. Freenet can share extra information with your Friends' Freenet nodes to improve speed. However, if they try to find out what you are doing with Freenet, or if their computers are infected with malware, your anonymity may be breached. How concerned are you?
 SecurityLevels.friendsThreatLevelConfirmTitle=WARNING: Setting friends security level to ${mode}
 SecurityLevels.friendsThreatLevel.name.HIGH=HIGH
 SecurityLevels.friendsThreatLevel.name.NORMAL=NORMAL
