Link to Truecrypt (in a new browser window), and only show suggestion re swap encryption in Windows.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1414,7 +1414,7 @@ SecurityLevels.maximumNetworkThreatLevelWarning=${bold}WARNING:${/bold} You are 
 SecurityLevels.maxSecurityYouNeedFriends=${bold}You must know at least one person already running Freenet${/bold}, preferably 3, 5-10 for good performance. You must add them on the Friends page. These must be people you already know and at least marginally trust.
 SecurityLevels.maximumNetworkThreatLevelCheckbox=Yes I really want to enable maximum security, I understand that Freenet is still experimental and it may still be possible to trace me, and that this setting may dramatically reduce Freenet's performance!
 SecurityLevels.friendsThreatLevelShort=Protection if your friends attack your anonymity
-SecurityLevels.friendsThreatLevel=Connecting to your Friends improves security. Freenet can share extra information with your Friends' Freenet nodes to improve speed. However, if they try to find out what you are doing with Freenet, or if their computers are infected with malware, your anonymity may be breached. How concerned are you?
+SecurityLevels.friendsThreatLevel=Connecting to your friends' Freenet nodes improves security. Freenet can share extra information with them to improve speed. However, if they try to find out what you are doing with Freenet, or if their computers are infected with malware, your anonymity may be breached. How concerned are you?
 SecurityLevels.friendsThreatLevelConfirmTitle=WARNING: Setting friends security level to ${mode}
 SecurityLevels.friendsThreatLevel.name.HIGH=HIGH
 SecurityLevels.friendsThreatLevel.name.NORMAL=NORMAL
@@ -1429,7 +1429,8 @@ SecurityLevels.highFriendsThreatLevelWarning=You are about to set your friends t
 SecurityLevels.highFriendsThreatLevelCheckbox=I am sure I need high level protection against compromised or treacherous friends' nodes.
 SecurityLevels.physicalThreatLevelShort=Protection if your computer is seized or stolen
 SecurityLevels.physicalThreatLevel=How concerned are you about people stealing or seizing your computer and being able to see what you've been doing on Freenet?
-SecurityLevels.physicalThreatLevelSwapfile=We strongly recommend you encrypt your hard disk using e.g. Truecrypt and choose LOW. If you have not done this, choose a higher level, but you should turn off or encrypt your swapfile. On some versions of Windows you can do this with the command "fsutil behavior set encryptpagingfile 1".
+SecurityLevels.physicalThreatLevelSwapfile=We strongly recommend you encrypt your hard disk using e.g. ${truecrypt}Truecrypt${/truecrypt} and choose LOW. If you have not done this, choose a higher level, but you should turn off or encrypt your swapfile.
+SecurityLevels.physicalThreatLevelSwapfileWindows=On some versions of Windows you can do this with the command "fsutil behavior set encryptpagingfile 1".
 SecurityLevels.physicalThreatLevel.name.NORMAL=NORMAL
 SecurityLevels.physicalThreatLevel.name.LOW=LOW
 SecurityLevels.physicalThreatLevel.choice.NORMAL=I am concerned. Encrypt all important data. (Most users should choose this option)
