Explain that updated JCE policy files are required

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -554,7 +554,7 @@ FcpServer.isEnabledLong=Enable the Freenet Client Protocol server
 FcpServer.portNumber=FCP port
 FcpServer.portNumberLong=The TCP port the FCP server should listen on
 FcpServer.ssl=Enable SSL?
-FcpServer.sslLong=Enable SSL on the FCP server
+FcpServer.sslLong=Enable SSL on the FCP server. You will need the 'Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files' for it to work.
 FetchException.longError.10=File not in archive
 FetchException.longError.11=Too many path components - not a manifest? Try removing one
 FetchException.longError.12=Internal temp files error, maybe disk full or permissions problem?
