Make what to do with cached filtered data configurable, with 3 options.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1545,6 +1545,8 @@ SimpleToadletServer.port=Web interface port
 SimpleToadletServer.portLong=The TCP port the web interface should listen on
 SimpleToadletServer.publicGatewayMode=Public gateway mode? (Only applies to allowed but non-full-access connections)
 SimpleToadletServer.publicGatewayModeLong=Should we enable public gateway mode? For IPs which are allowed to access Freenet, but are not allowed full access, this option disables the download queue and anything else that might conceivably be abused to attack the Freenet node, while still allowing browsing freesites. IP addresses with full access will be allowed to configure the node.
+SimpleToadletServer.refilterPolicy=What should fproxy do when a downloaded file matches the key being fetched, but it has already been filtered?
+SimpleToadletServer.refilterPolicy=What should fproxy do when a downloaded file matches the key being fetched, but it has already been filtered? RE_FILTER = filter it anyway, since the filter may have been improved since the original download, ACCEPT_OLD = accept the old data (maximum performance), RE_FETCH = ignore the old data. 
 SimpleToadletServer.ssl=Enable SSL?
 SimpleToadletServer.sslLong=Enable SSL on the web interface. You will need the 'Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files' for it to work.
 SSL.enable=Activate SSL support?
