--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1450,7 +1450,6 @@ QueueToadlet.confirmDeleteTitle=Are you sure you want to delete this file?
 QueueToadlet.confirmDelete=Do you want to delete this file from Freenet's encrypted temporary space? It may take some time to re-download it if you change your mind later.
 QueueToadlet.deleteFileFromTemp=DELETE FILE
 QueueToadlet.deleteFilesFromTemp=DELETE FILES
-QueueToadlet.disableFilter=Disable content filter
 QueueToadlet.dontCompressInCompatCell=don't compress
 QueueToadlet.download=Download
 QueueToadlet.downloadDisallowed=Downloading to "${directory}" is disallowed by your settings.
@@ -1577,6 +1576,7 @@ QueueToadlet.unknown=Unknown
 QueueToadlet.uploadSucceededTitle=Insert succeeded: ${filename}
 QueueToadlet.uploadsSucceededTitle=${nr} inserts succeeded
 QueueToadlet.uploadSucceeded=Your file ${filename} (size ${size}) has been successfully uploaded to Freenet. ${link}Click here${/link} to open the file.
+QueueToadlet.useFilter=Use filter
 QueueToadlet.warningUnsafeContent=Potentially Unsafe Content
 QueueToadlet.warningUnsafeContentExplanation=The file you want to download is currently not filtered by Freenet's content filter! That means that your anonymity can be compromised by opening the file!
 QueueToadlet.wipD=In Progress: Downloads (${size})
