--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1060,7 +1060,7 @@ Node.probeRespondIdentifierLong=If true Freenet will respond to probe requests f
 Node.probeLinkLengthsShort=Respond to probe requests for link lengths
 Node.probeLinkLengthsLong=If true Freenet will respond to probe requests for link lengths. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
 Node.probeLocationShort=Respond to probe requests for location
-Node.probeLocationLong=If true Freenet will respond to probe requests for location. This is to allow measurement of the network location distribution, and contains no information other than location. If false it will respond with a refusal.
+Node.probeLocationLong=If true Freenet will respond to probe requests for low-precision location. This is to allow measurement of the network location distribution, and contains no information other than location. If false it will respond with a refusal.
 Node.probeStoreSizeShort=Respond to probe requests for store size
 Node.probeStoreSizeLong=If true freenet will respond to probe requests for store size. This is to improve knowledge of network conditions, and allow simulations to better reflect the actual network. It will add a small amount of random noise to make the information less identifiable but still useful for diagnostics. If false it will respond with a refusal.
 Node.probeUptimeShort=Respond to probe requests for uptime
