Change Freenet description.
On the plugins page and the forum tab emphasize that Freetalk is
experimental and has significant performance and reliability problems.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -131,8 +131,8 @@ BuildOldAgeUserAlert.tooOld=This node's software is older than the oldest versio
 BuildOldAgeUserAlert.tooOldTitle=Build too old
 BuildOldAgeUserAlert.tooOldShort=This node is running such an old version of Freenet that it cannot connect to its peers any more! Please upgrade!
 ChatForumsToadlet.title=Talk to other people on Freenet
-ChatForumsToadlet.freetalkRecommended=Freetalk is the recommended way to chat on Freenet. Click below to load it. This is a "plugin" for Freenet, which provides anonymous chat forums. It is based on the "web of trust", which provides spam protection by allowing users to create anonymous identities and rate them down if they are spamming.
-ChatForumsToadlet.freetalkCaveat=Please be warned that we're still working on Freetalk, and its still not perfect. It may be relatively slow, in particular you may need to leave it running for an hour or two before you start to see messages.  It may also cause Freenet to use more memory and CPU and access the disk more often.
+ChatForumsToadlet.freetalkRecommended=Freetalk is the official Freenet forum software. It provides anonymous forums. It is still experimental, and has significant performance and reliability problems. It uses the Web of Trust plugin for spam protection, which allows users to rate down those who post spam. Click below to load it.
+ChatForumsToadlet.freetalkCaveat=Please be warned that we're still working on Freetalk, and it is currently slow and unreliable. In particular it may need to run for an hour or two before starting to see messages. It will also cause Freenet to use more memory and CPU, and access the disk more often.
 ChatForumsToadlet.freetalkButton=Try Freetalk
 ChatForumsToadlet.othersIntro=There are two other popular forums systems on Freenet:
 ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web link${/frost-web}) - The original Freenet discussion boards client. This has severe spam and denial of service problems, we strongly recommend you run one of the others. Like FMS, this is not part of Freenet, so you will have to install and run it yourself.
@@ -1369,7 +1369,7 @@ PproxyToadlet.pluginDesc.XMLSpider=Obsolete tool to generate old format freesite
 PproxyToadlet.pluginDesc.Freereader=Tool to insert RSS and ATOM feeds as freesites.
 PproxyToadlet.pluginDesc.Library=Tool to search Freenet using old or new format search indexes.
 PproxyToadlet.pluginDesc.Spider=Tool to create and automatically upload new format freesite search indexes, by automatically following links from your bookmarks. Causes very heavy load on your Freenet node, don't use it unless you have a powerful computer! Requires that the Library plugin also be loaded.
-PproxyToadlet.pluginDesc.Freetalk=Anonymous chat forums over Freenet. Requires WebOfTrust.
+PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Requires WebOfTrust.
 PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for Freetalk and other chat and social applications over Freenet.
 PproxyToadlet.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
 PproxyToadlet.pluginFilename=Name
