Make FNPRoutedPing configurable, disable it by default, but enabled in simulations.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1017,6 +1017,8 @@ Node.enablePacketCoalescing=Enable packet coalescing?
 Node.enablePacketCoalescingLong=Enable packet coalescing? Packet coalescing increases bandwidth efficiency, reduces CPU usage and gains some resistance to traffic analysis at a small cost in message latency. Don't turn this off unless you know what you're doing.
 Node.enablePerNodeFailureTables=Enable per-node failure tables?
 Node.enablePerNodeFailureTablesLong=Enable automatically rerouting around nodes that failed a request within the last 10 minutes?
+Node.enableRoutedPing=Enable FNPRoutedPing?
+Node.enableRoutedPingLong=Enable FNPRoutedPing? Only useful in simulations, not on the real network. Turn it off.
 Node.enableSwapping=Enable location swapping? (DO NOT TURN THIS OFF!)
 Node.enableSwappingLong=Enable location swapping? (DO NOT TURN THIS OFF! It is only useful in some simulations).
 Node.enableSwapQueueing=Enable queueing of swap requests? (DO NOT TURN THIS OFF!)
