--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -106,6 +106,7 @@ Bookmarks.Defaults.Description.Publish=Simple guide to publishing web sites to F
 Bookmarks.Defaults.Description.FreesiteHOWTO=A more detailed explanation of publishing freesites
 Bookmarks.Defaults.Description.Sone=Fast anonymous social chat over Freenet
 Bookmarks.Defaults.Description.freenetdocwiki=A Wiki about Freenet (needs some tools to edit)
+Bookmarks.Defaults.Description.FSNG=An illustrated guide to setting up social networking tools
 Bookmarks.Defaults.Description.jSite=Tool for uploading freesites (Freenet websites)
 Bookmarks.Defaults.Description.Flog.Toad=Toad's flog
 Bookmarks.Defaults.Description.Flog.Bombe=Bombe's flog
@@ -120,6 +121,7 @@ Bookmarks.Defaults.ShortDescription.Publish=How to publish web sites on freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a website to Freenet
 Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
+Bookmarks.Defaults.ShortDescription.FSNG=Social networking
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
 Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet developer's personal blog
 Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone developer's personal blog
