--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -107,6 +107,7 @@ Bookmarks.Defaults.Description.FreesiteHOWTO=A more detailed explanation of publ
 Bookmarks.Defaults.Description.Sone=Fast anonymous social chat over Freenet
 Bookmarks.Defaults.Description.freenetdocwiki=A Wiki about Freenet (needs some tools to edit)
 Bookmarks.Defaults.Description.Fniki=An older Wiki about Freenet
+Bookmarks.Defaults.Description.FSNG=An illustrated guide to setting up social networking tools
 Bookmarks.Defaults.Description.jSite=Tool for uploading freesites (Freenet websites)
 Bookmarks.Defaults.Description.Flog.Toad=Toad's flog
 Bookmarks.Defaults.Description.Flog.Bombe=Bombe's flog
@@ -122,6 +123,7 @@ Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a 
 Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
 Bookmarks.Defaults.ShortDescription.Fniki=Older Freenet-based wiki
+Bookmarks.Defaults.ShortDescription.FSNG=Social networking
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
 Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet developer's personal blog
 Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone developer's personal blog
