typo corrections and further clarifications of the first two physical security levels

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1647,13 +1647,13 @@ SecurityLevels.physicalThreatLevel=How concerned are you about people stealing o
 SecurityLevels.physicalThreatLevelSwapfile=We strongly recommend you encrypt your hard disk using e.g. ${truecrypt}Truecrypt${/truecrypt} and choose NONE. If you have not done this, choose a higher level, but you should turn off or encrypt your swapfile.
 SecurityLevels.physicalThreatLevelSwapfileWindows=On some versions of Windows you can do this with the command "fsutil behavior set encryptpagingfile 1".
 SecurityLevels.physicalThreatLevel.name.LOW=NONE
-SecurityLevels.physicalThreatLevel.choice.LOW=Don't encrypt anything. (Recommended)
-SecurityLevels.physicalThreatLevel.desc.LOW=Choose this option if you are using some form of whole disk encryption or if you use any communication plugins (WebOfTrust, Freemail, Freetalk, FMS, Sone, etc). The higher levels of security WILL NOT encrypt the data associated with plugins.
+SecurityLevels.physicalThreatLevel.choice.LOW=Don't encrypt anything.
+SecurityLevels.physicalThreatLevel.desc.LOW=Choose this option if you are using some form of whole disk encryption, which is essential for the protection of communication plugin data (WebOfTrust, Freemail, Freetalk, FMS, Sone, etc). The higher levels of security WILL NOT encrypt the data associated with plugins.
 SecurityLevels.physicalThreatLevel.name.NORMAL=LOW
 SecurityLevels.physicalThreatLevel.choice.NORMAL=Protect the file transfer history with a persistent encryption key.
-SecurityLevels.physicalThreatLevel.desc.NORMAL=You can wipe file transfer data using the panic button or securely deleting the file master.keys. We recommend you fetch big files rather than Download'ing them, so that they are encrypted and can be viewed through the downloads page.
+SecurityLevels.physicalThreatLevel.desc.NORMAL=You can wipe file transfer data using the panic button or securely deleting the file master.keys. We recommend you Fetch big files rather than Downloading them, so that they are encrypted and can be viewed through the downloads page. This option will not add protection against attackers who physically sieze your computer because the encryption key will be accessible on the hard drive. However choosing this option will facilitate moving to a higher security level in the future if desired.
 SecurityLevels.physicalThreatLevel.name.HIGH=HIGH
-SecurityLevels.physicalThreatLevel.choice.HIGH=Protect the file transfer and site visit history with the specified password.
+SecurityLevels.physicalThreatLevel.choice.HIGH=Protect the file transfer and site visit history with a master password.
 SecurityLevels.physicalThreatLevel.desc.HIGH=You will have to enter the password to access your download queue (and the cache of recently visited sites). You can also use the panic button. 
 SecurityLevels.physicalThreatLevel.name.MAXIMUM=MAXIMUM
 SecurityLevels.physicalThreatLevel.choice.MAXIMUM=Encrypt the file transfer and site visit history with a random, temporary encryption key. Wipe history and downloaded files whenever Freenet is restarted. (Freenet will not remember what you have visited between restarts, so will download stuff again; this may make you slightly more vulnerable on the network level but if you are very worried about seizure choose this option).
