Improvements to strings and split out wording abotu swap from wording about truecrypt.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1644,23 +1644,30 @@ SecurityLevels.networkThreatLevelConfirmTitle=WARNING: Setting network security 
 SecurityLevels.maximumNetworkThreatLevelWarning=${bold}WARNING:${/bold} You are about to set the maximum network security level! This will ${bold}significantly${/bold} slow down Freenet for you! Please do not do this unless you really need the security!
 SecurityLevels.maxSecurityYouNeedFriends=${bold}You must know at least one person already running Freenet${/bold}, preferably 3, 5-10 for good performance. You must add them on the Friends page. These must be people you already know and at least marginally trust.
 SecurityLevels.maximumNetworkThreatLevelCheckbox=Yes I really want to enable maximum security, I understand that Freenet is still experimental and it may still be possible to trace me, and that this setting may dramatically reduce Freenet's performance!
-SecurityLevels.physicalThreatLevelShort=Protection of your file transfer and browsing history
-SecurityLevels.physicalThreatLevel=How concerned are you about people stealing or seizing your computer and being able to see what sites you've visited and which files you've uploaded and downloaded on Freenet?
-SecurityLevels.physicalThreatLevelSwapfile=We strongly recommend you encrypt your hard disk using e.g. ${truecrypt}Truecrypt${/truecrypt} and choose NONE. If you have not done this, choose a higher level, but you should turn off or encrypt your swapfile.
-SecurityLevels.physicalThreatLevelSwapfileWindows=On some versions of Windows you can do this with the command "fsutil behavior set encryptpagingfile 1".
+SecurityLevels.physicalThreatLevelShort=Protection of your downloads, uploads and Freenet browsing cache
+SecurityLevels.physicalThreatLevel=How concerned are you about people stealing or seizing your computer?
+SecurityLevels.physicalThreatLevelTruecrypt=We strongly recommend you encrypt your hard disk using e.g. ${truecrypt}Truecrypt${/truecrypt}. This will provide the best protection, especially if you use third party apps and plugins such as Sone and FMS, but may take some time to set up. Otherwise, you can set a password for your downloads, uploads, and cache of recently visited Freenet websites.
+SecurityLevels.physicalThreatLevelSwapfile=Also, you should encrypt your swapfile if possible (this is a temporary file used by ${operatingSystem} to provide extra space if it runs out of memory). This may be easier to set up than full disk encryption.
+SecurityLevels.physicalThreatLevelSwapfileWindows=On some versions of Windows you can encrypt your swapfile with the command "fsutil behavior set encryptpagingfile 1".
 SecurityLevels.physicalThreatLevel.name.LOW=NONE
-SecurityLevels.physicalThreatLevel.choice.LOW=Don't encrypt anything.
-SecurityLevels.physicalThreatLevel.desc.LOW=Choose this option if you are using some form of whole disk encryption, which is essential for the protection of communication plugin data (WebOfTrust, Freemail, Freetalk, FMS, Sone, etc). The higher levels of security WILL NOT encrypt the data associated with plugins.
+SecurityLevels.physicalThreatLevel.choice.LOW=Don't encrypt anything. (Choose only if you have Truecrypt etc installed)
+SecurityLevels.physicalThreatLevel.desc.LOW=Choose this option if you are using some form of whole disk encryption.
 SecurityLevels.physicalThreatLevel.name.NORMAL=LOW
-SecurityLevels.physicalThreatLevel.choice.NORMAL=Protect the file transfer history with a persistent encryption key.
-SecurityLevels.physicalThreatLevel.desc.NORMAL=You can wipe file transfer data using the panic button or securely deleting the file master.keys. We recommend you "Fetch" big files rather than "Downloading" them, so that they are encrypted and can be viewed through the downloads page. This option will not add protection against attackers who physically sieze your computer because the encryption key will be accessible on the hard drive. However choosing this option will facilitate moving to a higher security level in the future if desired.
+SecurityLevels.physicalThreatLevel.choice.NORMAL=Protect the downloads, uploads, and Freenet browsing cache, with a persistent encryption key so they can be wiped quickly.
+SecurityLevels.physicalThreatLevel.desc.NORMAL=You can quickly wipe this data by using the panic button or securely deleting the file master.keys. We recommend you "Fetch" big files rather than "Downloading" them, so that they are encrypted and can be viewed through the downloads page. However if your computer is seized, unless you have been able to use the Panic button, they will be able to see what you have been doing on Freenet.
 SecurityLevels.physicalThreatLevel.name.HIGH=HIGH
-SecurityLevels.physicalThreatLevel.choice.HIGH=Protect the file transfer and site visit history with a master password.
-SecurityLevels.physicalThreatLevel.desc.HIGH=You will have to enter the password to access your download queue (and the cache of recently visited sites). You can also use the panic button. 
+SecurityLevels.physicalThreatLevel.choice.HIGH=Protect the downloads, uploads, and Freenet browsing cache with a password.
+SecurityLevels.physicalThreatLevel.desc.HIGH=You will have to enter the password to access your download queue (and the cache of recently visited sites). You can also use the panic button. We recommend you "Fetch" big files rather than "Downloading" them, so that they are encrypted and can be viewed through the downloads page. If your computer is seized they will need the password.
 SecurityLevels.physicalThreatLevel.name.MAXIMUM=MAXIMUM
-SecurityLevels.physicalThreatLevel.choice.MAXIMUM=Encrypt the file transfer and site visit history with a random, temporary encryption key. Wipe history and downloaded files whenever Freenet is restarted. (Freenet will not remember what you have visited between restarts, so will download stuff again; this may make you slightly more vulnerable on the network level but if you are very worried about seizure choose this option).
-SecurityLevels.physicalThreatLevel.desc.MAXIMUM=Freenet will keep the encryption keys in RAM only, and will never store the keys to disk. All downloads and uploads will persist only until restart and will not be written to disk. You should take care to avoid saving content from Freenet to disk accidentally.
+SecurityLevels.physicalThreatLevel.choice.MAXIMUM=Use a temporary encryption key, so that downloads, uploads and Freenet browsing cache are wiped on restarting Freenet.
+SecurityLevels.physicalThreatLevel.desc.MAXIMUM=Freenet will keep the encryption keys in RAM only, and will never store the keys to disk. All downloads and uploads will persist only until restart, and Freenet will refuse to write files to disk. You should take care to avoid saving content from Freenet to disk accidentally. Please consider installing Truecrypt, especially if you are going to use third party plugins and apps over Freenet such as FMS and Sone!
 SecurityLevels.physicalThreatLevelEnd=You should follow standard security precautions (keep updated, run an anti-virus, don't open files you don't trust etc), and note that if they capture your computer while it is switched on and running Freenet, no amount of encryption will help you!
+OperatingSystemName.Windows=Windows
+OperatingSystemName.Linux=Linux
+OperatingSystemName.MacOS=MacOS
+OperatingSystemName.FreeBSD=FreeBSD
+OperatingSystemName.GenericUnix=UNIX
+OperatingSystemName.All=your operating system
 SecurityLevels.userAlertShortText=Security levels: Network: ${network}, Friends: ${friends}, Physical: ${physical}
 SecurityLevels.userAlertNetworkThreatLevel=Protection against a stranger attacking you over the Internet: ${level}
 SecurityLevels.userAlertPhysicalThreatLevel=Protection if your computer is seized or stolen: ${level}
